# apply-dataform-workflows

./: .gitignore  CLAUDE.md  LICENSE  README-ja.md  README.md  action.yml  pyproject.toml  schema.json
.claude/skills/sync-readme/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-13-allow-empty-config.md
docs/superpowers/specs/: 2026-04-13-allow-empty-config-design.md
examples/: release_workflow_config_advanced.json  release_workflow_config_simple.json  workflow_settings.yaml
examples/.github/workflows/: apply-dataform-workflows.yml
src/apply_dataform_workflows/: apply.py  client.py  config.py
tests/: test_apply.py  test_client.py  test_config.py
tests/fixtures/: config_advanced.json  config_duplicate_rc.json  config_duplicate_wc.json  config_no_workflow.json  config_simple.json  workflow_settings.yaml
